2004-09-02  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules, gnome26.modules: Use gtkmm-2-4 branch of
	gtkmm.

2004-09-01  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Added gnome-volume-manager to 
	meta-gnome-desktop.

da2004-09-01  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Added evolution, gnome-system-tools, 
	gnome-nettools, and vino to meta-gnome-desktop. These are new modules 
	in GNOME 2.8.

2004-08-31  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (gnopernicus): use gnome-2-8 branch.

	* modulesets/gnome1.modules:
	* modulesets/gnome20.modules:
	* modulesets/gnome22.modules: remove ancient modulesets, since
	they don't build anymore due to CVS modules being moved to
	/cvs/archive.  If anyone cares, they should be able to resurrect
	these modulesets.

	* modulesets/gnome26.modules (gnutls): update to 1.0.20.

	* modulesets/gnome28.modules (gnutls): update to 1.0.20.

	* jhbuild/commands/sanitycheck.py (do_sanitycheck): perform
	sanitychecks on Automake 1.9 too.

	* modulesets/bootstrap.modules (automake-1.9): update to 1.9.1.

	* modulesets/gnome28.modules (vino): add a dependency on gnutls.
	Fixes bug #150928.

	* modulesets/gnome26.modules, gnome28.modules (intltool): depend
	on gnome-common for the autogen script.  Patch from bug #151189 by
	Scott Tsai <scottt958@yahoo.com.tw>.

2004-08-30  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Add e-d-s dependency to gnome-panel.

2004-08-29  Manish Singh  <yosh@gimp.org>

	* jhbuild/utils/arch.py
	* jhbuild/utils/cvs.py
	* jhbuild/utils/svn.py: fix a few ytpos and cut'n'paste thinkos.

2004-08-26  JP Rosevear  <jpr@novell.com>

	* modulesets/gnome28.modules: update soup branch

2004-08-24  Calum Benson  <calum.benson@sun.com>

	* modulesets/gnome28.modules:

	Build gnome-2-8 branch of gcalctool (which doesn't have
	the new operator precedence features).
