@@ -100,9 +100,6 @@ def do_sanitycheck(config, args):
     if not check_version('automake-1.4 --version',
                          r'automake \([^)]*\) ([\d.]+)', '1.4'):
         print 'automake-1.4 not found'
-    if not check_version('automake-1.6 --version',
-                         r'automake \([^)]*\) ([\d.]+)', '1.6'):
-        print 'automake-1.6 not found'
     if not check_version('automake-1.7 --version',
                          r'automake \([^)]*\) ([\d.]+)', '1.7'):
         print 'automake-1.7 not found'
@@ -113,7 +110,7 @@ def do_sanitycheck(config, args):
                          r'automake \([^)]*\) ([\d.]+)', '1.9'):
         print 'automake-1.9 not found'
 
-    for amver in ('1.4', '1.6', '1.7', '1.8', '1.9'):
+    for amver in ('1.4', '1.7', '1.8', '1.9'):
         try:
             path = get_aclocal_path(amver)
         except:
