@@ -26,10 +26,6 @@
     <source href="http://ftp.gnu.org/gnu/automake/automake-1.4-p6.tar.gz"
             size="375060" md5sum="24872b81b95d78d05834c39af2cfcf05" />
   </tarball>
-  <tarball id="automake-1.6" version="1.6.3">
-    <source href="http://ftp.gnu.org/gnu/automake/automake-1.6.3.tar.gz"
-            size="609618" md5sum="2bd506db63b6d10458cb644b6171ce93" />
-  </tarball>
   <tarball id="automake-1.7" version="1.7.9">
     <source href="http://ftp.gnu.org/gnu/automake/automake-1.7.9.tar.bz2"
             size="577705" md5sum="571fd0b0598eb2a27dcf68adcfddfacb" />
@@ -59,7 +55,6 @@
       <dep package="autoconf" />
       <dep package="libtool" />
       <dep package="automake-1.4" />
-      <dep package="automake-1.6" />
       <dep package="automake-1.7" />
       <dep package="automake-1.8" />
       <dep package="automake-1.9" />
