@@ -1,3 +1,10 @@
+2004-09-02  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/commands/sanitycheck.py (do_sanitycheck): don't check
+	to see if automake-1.6 is installed.
+
+	* modulesets/bootstrap.modules: remove automake-1.6.
+
 2004-09-02  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome28.modules, gnome26.modules: Use gtkmm-2-4 branch of
